--- a/css/style.css
+++ b/css/style.css
@@ -702,4 +702,88 @@ input {
 .price-content_bottom-content_gravity-bottom {
   left: 30px;
   bottom: 0;
+}
+
+.customer-content {
+  padding-top: 120px;
+}
+.customer-content_title {
+  text-align: center;
+  color: #151411;
+  font-family: Urbanist;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  text-transform: capitalize;
+  margin-bottom: 40px;
+}
+.customer-content_sliders-pagination {
+  color: #828A96;
+  text-align: center;
+  margin-top: 65px;
+}
+.customer-content_slide {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 720px;
+}
+.customer-content_slide-avatar {
+  min-width: 245px;
+  height: 294px;
+  margin-right: 35px;
+}
+.customer-content_slide-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px 0px 0px 12px;
+}
+.customer-content_slide-description {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  flex-wrap: wrap;
+  padding: 35px 35px 35px 0;
+}
+.customer-content_slide-description_ratings {
+  display: flex;
+  align-items: center;
+}
+.customer-content_slide-description_rating {
+  width: 15px;
+  height: 15px;
+  background-image: url(/img/customer/Star.svg);
+  background-size: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 15px;
+}
+.customer-content_slide-description_names {
+  color: #151411;
+  font-family: Urbanist;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 5px;
+}
+.customer-content_slide-description_prof {
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 15px;
+}
+.customer-content_slide-description_text {
+  width: 100%;
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
 }/*# sourceMappingURL=style.css.map */
