--- a/sass/_customer.sass
+++ b/sass/_customer.sass
@@ -21,6 +21,8 @@
             justify-content: space-between
             align-items: center
             width: 720px
+            border-radius: 12px
+            box-shadow: 10px 10px 50px 0px rgba(35, 96, 0, 0.03)
             &-avatar
                 min-width: 245px
                 height: 294px
@@ -42,7 +44,7 @@
                 &_rating
                     width: 15px
                     height: 15px
-                    background-image: url(/img/customer/Star.svg)
+                    background-image: url(img/customer/Star.svg)
                     background-size: no-repeat
                     background-position: center
                     background-size: cover
