--- a/sass/_furniture.sass
+++ b/sass/_furniture.sass
@@ -41,6 +41,7 @@
             background-color: $white
             top: 256px
             &-input
+                width: 450px
                 border: none
                 outline: none
                 color: $text
@@ -49,7 +50,7 @@
                 font-style: normal
                 font-weight: 400
                 line-height: normal
-                margin-right: 472px
+                margin-right: 170px
             &-link
                 color: $white
                 padding: 15px 35px
