--- a/css/style.css
+++ b/css/style.css
@@ -757,7 +757,7 @@ input {
 .customer-content_slide-description_rating {
   width: 15px;
   height: 15px;
-  background-image: url(img/customer/Star.svg);
+  background-image: url(img/customer/star.svg);
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
