--- a/sass/_customer.sass
+++ b/sass/_customer.sass
@@ -44,7 +44,7 @@
                 &_rating
                     width: 15px
                     height: 15px
-                    background-image: url(img/customer/Star.svg)
+                    background-image: url(img/customer/star.svg)
                     background-size: no-repeat
                     background-position: center
                     background-size: cover
