--- a/sass/_customer.sass
+++ b/sass/_customer.sass
@@ -45,10 +45,11 @@
                     width: 15px
                     height: 15px
                     background-image: url(img/customer/star.svg)
-                    background-size: no-repeat
+                    // background-size: no-repeat
                     background-position: center
                     background-size: cover
                     margin-bottom: 15px
+                    margin-right: 5px
                 &_names
                     color: $title
                     font-family: Urbanist
