--- a/css/style.css
+++ b/css/style.css
@@ -758,10 +758,10 @@ input {
   width: 15px;
   height: 15px;
   background-image: url(img/customer/star.svg);
-  background-size: no-repeat;
   background-position: center;
   background-size: cover;
   margin-bottom: 15px;
+  margin-right: 5px;
 }
 .customer-content_slide-description_names {
   color: #151411;
