--- a/sass/_product.sass
+++ b/sass/_product.sass
@@ -64,7 +64,7 @@
                 max-width: 430px
                 &_image
                     max-width: 430px
-                    max-height: 460px
+                    height: 350px
                     margin-bottom: 30px
                     img
                         width: 100%
