--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ input {
 }
 .product-content_slide-item_image {
   max-width: 430px;
-  max-height: 460px;
+  height: 350px;
   margin-bottom: 30px;
 }
 .product-content_slide-item_image img {
@@ -456,6 +456,7 @@ input {
   width: 100%;
   height: 100%;
   border-radius: 30px 30px 0px 0px;
+  filter: brightness(70%);
 }
 .browse-content_top-right_items {
   color: #fff;
@@ -527,7 +528,7 @@ input {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  filter: brightness(70%);
 }
 .browse-content_bottom-bg_first {
   border-radius: 30px 0 0 30px;
@@ -706,6 +707,7 @@ input {
 }
 
 .customer-content {
+  position: relative;
   padding-top: 120px;
 }
 .customer-content_title {
@@ -723,6 +725,21 @@ input {
   color: #828A96;
   text-align: center;
   margin-top: 65px;
+}
+.customer-content_sliders-navigation {
+  position: absolute;
+  color: #236000;
+  font-size: 30px;
+  bottom: -9px;
+}
+.customer-content_sliders-navigation_left {
+  left: 40%;
+}
+.customer-content_sliders-navigation_right {
+  right: 41%;
+}
+.customer-content_sliders-navigation:hover {
+  cursor: pointer;
 }
 .customer-content_slide {
   display: flex;
@@ -758,6 +775,7 @@ input {
   width: 15px;
   height: 15px;
   background-image: url(img/customer/star.svg);
+  background-size: no-repeat;
   background-position: center;
   background-size: cover;
   margin-bottom: 15px;
