--- a/sass/_browse.sass
+++ b/sass/_browse.sass
@@ -41,6 +41,7 @@
                         width: 100%
                         height: 100%
                         border-radius: 30px 30px 0px 0px
+                        filter: brightness(70%)
                 &_items
                     color: $white
                     width: 90%
@@ -103,8 +104,9 @@
                     width: 100%
                     height: 100%
                     object-fit: cover
-                    z-index: -1
+                    filter: brightness(70%)
                 &_first
                     border-radius: 30px 0 0 30px
+
                 &_last
                     border-radius: 0px 0 30px 0
