--- a/css/style.css
+++ b/css/style.css
@@ -807,4 +807,136 @@ input {
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin-top: 215px;
+}
+.footer-content_left {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  flex-direction: column;
+  flex-basis: 100%;
+  position: relative;
+  border-radius: 0px 30px 0px 0px;
+  background: #D9D9D9;
+  padding: 80px 120px 40px 100px;
+}
+.footer-content_left-logo {
+  display: block;
+  margin-bottom: 40px;
+}
+.footer-content_left-contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 236px;
+}
+.footer-content_left-contacts_left {
+  margin-right: 160px;
+}
+.footer-content_left-contacts_left-email {
+  margin-bottom: 5px;
+}
+.footer-content_left-contacts_right-street {
+  margin-bottom: 5px;
+}
+.footer-content_left-copyright {
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
+.footer-content_right {
+  padding: 0 0 40px 87px;
+}
+.footer-content_right-title {
+  margin-bottom: 15px;
+}
+.footer-content_right-title h1 {
+  color: #151411;
+  font-family: Urbanist;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  text-transform: capitalize;
+}
+.footer-content_right-text {
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 40px;
+}
+.footer-content_right-button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 15px 35px;
+  border-radius: 10px;
+  background: #236000;
+  color: #fff;
+  font-family: Urbanist;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+  margin-bottom: 110px;
+}
+.footer-content_right-soc {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 63px;
+}
+.footer-content_right-soc_inst, .footer-content_right-soc_fb, .footer-content_right-soc_ld {
+  color: #151411;
+  font-family: Urbanist;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
+.footer-content_right-policy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-content_right-policy_privacy, .footer-content_right-policy_lang {
+  color: #AFADB5;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
+.footer-content_item {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.footer-content_item-top {
+  top: 30px;
+}
+.footer-content_item-right {
+  right: 30px;
 }/*# sourceMappingURL=style.css.map */
