--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,4 +1,5 @@
 .footer
+    background: linear-gradient(to right, #D9D9D9 40%, transparent 50%)
     &-content
         display: flex
         justify-content: space-between
