--- a/sass/_browse.sass
+++ b/sass/_browse.sass
@@ -9,14 +9,15 @@
             &-left
                 margin-right: 85px
                 &_title
-                    color: $title
-                    font-family: Urbanist
-                    font-size: 45px
-                    font-style: normal
-                    font-weight: 700
-                    line-height: 60px
-                    text-transform: capitalize
-                    margin-bottom: 15px
+                    &-text
+                        color: $title
+                        font-family: Urbanist
+                        font-size: 45px
+                        font-style: normal
+                        font-weight: 700
+                        line-height: 60px
+                        text-transform: capitalize
+                        margin-bottom: 15px
                 &_text
                     display: block
                     color: $text
