--- a/sass/_customer.sass
+++ b/sass/_customer.sass
@@ -3,15 +3,16 @@
         position: relative
         padding-top: 120px
         &_title
-            text-align: center
-            color: $title
-            font-family: Urbanist
-            font-size: 30px
-            font-style: normal
-            font-weight: 700
-            line-height: 60px
-            text-transform: capitalize
-            margin-bottom: 40px
+            &-text
+                text-align: center
+                color: $title
+                font-family: Urbanist
+                font-size: 45px
+                font-style: normal
+                font-weight: 700
+                line-height: 60px
+                text-transform: capitalize
+                margin-bottom: 40px
         &_sliders
             &-pagination
                 color: $form
