--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -22,10 +22,12 @@
             padding: 15px 35px
             background-color: $bgnbtn
             border-radius: 10px
-            &-link
-                color: $white
-                font-family: Urbanist
-                font-size: 18px
-                font-style: normal
-                font-weight: 500
-                line-height: normal
+            outline: none
+            border: none
+            cursor: pointer
+            color: $white
+            font-family: Urbanist
+            font-size: 18px
+            font-style: normal
+            font-weight: 500
+            line-height: normal
