--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -47,7 +47,7 @@
             padding: 0 0 40px 87px
             &-title
                 margin-bottom: 15px
-                h1
+                &_text
                     color: $title
                     font-family: Urbanist
                     font-size: 45px
