--- a/sass/_mission.sass
+++ b/sass/_mission.sass
@@ -13,7 +13,7 @@
                 font-weight: 700
                 line-height: 60px
                 margin-bottom: 30px
-            &-link
+            &-button
                 color: $white
                 font-family: Urbanist
                 font-size: 18px
@@ -23,6 +23,8 @@
                 padding: 15px 35px
                 border-radius: 10px
                 background: #236000
+                border: none
+                cursor: pointer
         &_right
             max-width: 50%
             &-text
