--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -77,12 +77,18 @@
                 font-weight: 500
                 line-height: normal
                 text-transform: capitalize
-                margin-bottom: 110px
+                margin-bottom: 50px
+            &-line
+                display: block
+                width: 573px
+                height: 1px
+                background: #F3F3F3
+                margin-bottom: 50px
             &-soc
                 display: flex
                 justify-content: space-between
                 align-items: center
-                margin-bottom: 63px
+                margin-bottom: 74px
                 &_inst, &_fb, &_ld
                     color: $title
                     font-family: Urbanist
